--- a/triggers/neuro_v1/Makefile
+++ b/triggers/neuro_v1/Makefile
@@ -9,6 +9,7 @@ ifeq ($(OS),Darwin)
           -I ../../xml_support/ \
           -I ../../aux-packages/tcl8.5.9/generic/ \
           -I ../../../../aux-packages/build/include/ \
+          -I ../../../mental-fsm/p2vera/source/ \
           -DMACOSX -DAUXPACKAGES
     LIB_EXT=dylib
     
@@ -19,6 +20,7 @@ ifeq ($(OS),Darwin)
          -ltcl8.5 \
          `pkg-config --libs libxml-2.0` \
          -lfloatfann -L ../../../../aux-packages/fann-2.1.0/src/.libs/ \
+         -L ../../../bin/libs/ -lp2vera \
          -lxmlsup -L ../../xml_support/obj/
 else
 ifeq ($(AUXBUILD),AUX)
@@ -26,6 +28,7 @@ ifeq ($(AUXBUILD),AUX)
           -I ../../xml_support/ \
           -I ../../../../aux-packages/tcl8.5.9/generic/ \
           -I ../../../../aux-packages/build/include/ \
+          -I ../../../mental-fsm/p2vera/source/ \
           -DGNULINUX -DAUXPACKAGES
 
     LDFLAGS= -shared \
@@ -33,11 +36,13 @@ ifeq ($(AUXBUILD),AUX)
          -ltcl8.5 \
          `pkg-config --libs libxml-2.0` \
          -lfloatfann -L ../../../../aux-packages/build/lib/ \
+         -L ../../../bin/libs/ -lp2vera \
          -lxmlsup -L ../../xml_support/obj/
 else
     CF_AUX_FLAGS= `pkg-config --cflags libxml-2.0` \
           `pkg-config --cflags fann` \
           -I ../../xml_support/ \
+          -I ../../../mental-fsm/p2vera/source/ \
           -DGNULINUX
     
     LDFLAGS= -shared \
@@ -45,6 +50,7 @@ else
          -ltcl8.5 \
          `pkg-config --libs libxml-2.0` \
          `pkg-config --libs fann` \
+         -L ../../../bin/libs/ -lp2vera \
          -lxmlsup -L ../../xml_support/obj/
 endif
 	install_targets=install.gnulinux
@@ -77,6 +83,7 @@ install.gnulinux: FORCE
 install.macos: FORCE
 	@install_name_tool -change ./obj/libxmlsup.dylib  @executable_path/libs/libxmlsup.dylib $(BUILD_DIR)/$(PROG)
 	@install_name_tool -change  /usr/local/lib/libfloatfann.2.dylib  @executable_path/libs/libfloatfann.2.0.1.dylib $(BUILD_DIR)/$(PROG)
+	@install_name_tool -change ./obj/libp2vera.dylib  @executable_path/libs/libp2vera.dylib $(BUILD_DIR)/$(PROG)
 	@cp $(BUILD_DIR)/$(PROG) ../../../bin/libs/
 
 dirs: FORCE
